{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 13,
  "lineage": "510c0942-b28c-1770-4748-b6a19c6340b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577430166986:vpc/vpc-028538eed195469b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-03cde3f9e4d41ec79",
            "default_route_table_id": "rtb-0dd61658f6f251db6",
            "default_security_group_id": "sg-07e6e8274c5883e11",
            "dhcp_options_id": "dopt-0118b83470e1ca3b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-028538eed195469b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd61658f6f251db6",
            "owner_id": "577430166986"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:577430166986:loadbalancer/elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-2036170862.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "instances": [
              "i-05176ea830d4b2808",
              "i-0694520f03e90c7c4",
              "i-0a3c8786a759323f8",
              "i-0b3e12bcbb3214635",
              "i-0cc6927813b6059f8",
              "i-0dc7476b0531601df"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-00bbdd226a325606f"
            ],
            "source_security_group": "577430166986/elb_sg",
            "source_security_group_id": "sg-00bbdd226a325606f",
            "subnets": [
              "subnet-03c9fff6653e0f49d",
              "subnet-041481310ee98fdcc",
              "subnet-05fab0bb62abadc5d",
              "subnet-0a87c23a80ad60234",
              "subnet-0cf55884766b81cc4",
              "subnet-0f6931f1ca629419e"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.http_servers",
            "aws_security_group.elb_sg",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-03c9fff6653e0f49d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-0a3c8786a759323f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3c8786a759323f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02f8ce35c5c92b5a3",
            "private_dns": "ip-172-31-29-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.78",
            "public_dns": "ec2-50-19-54-226.compute-1.amazonaws.com",
            "public_ip": "50.19.54.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d2f8f8fd742778ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c9fff6653e0f49d",
            "tags": {
              "name": "http_servers_subnet-03c9fff6653e0f49d"
            },
            "tags_all": {
              "name": "http_servers_subnet-03c9fff6653e0f49d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-041481310ee98fdcc",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-0b3e12bcbb3214635",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3e12bcbb3214635",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03447f3f7f5119567",
            "private_dns": "ip-172-31-87-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.87.60",
            "public_dns": "ec2-52-87-179-17.compute-1.amazonaws.com",
            "public_ip": "52.87.179.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091874842b25d9c3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041481310ee98fdcc",
            "tags": {
              "name": "http_servers_subnet-041481310ee98fdcc"
            },
            "tags_all": {
              "name": "http_servers_subnet-041481310ee98fdcc"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-05fab0bb62abadc5d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-0cc6927813b6059f8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc6927813b6059f8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04024ee24e1ca9aec",
            "private_dns": "ip-172-31-15-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.15.77",
            "public_dns": "ec2-44-205-9-220.compute-1.amazonaws.com",
            "public_ip": "44.205.9.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b698d3e18e53d336",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05fab0bb62abadc5d",
            "tags": {
              "name": "http_servers_subnet-05fab0bb62abadc5d"
            },
            "tags_all": {
              "name": "http_servers_subnet-05fab0bb62abadc5d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0a87c23a80ad60234",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-05176ea830d4b2808",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05176ea830d4b2808",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0615f4bbf8c017c40",
            "private_dns": "ip-172-31-36-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.175",
            "public_dns": "ec2-35-175-228-146.compute-1.amazonaws.com",
            "public_ip": "35.175.228.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3aae02561435179",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a87c23a80ad60234",
            "tags": {
              "name": "http_servers_subnet-0a87c23a80ad60234"
            },
            "tags_all": {
              "name": "http_servers_subnet-0a87c23a80ad60234"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0cf55884766b81cc4",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-0694520f03e90c7c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0694520f03e90c7c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8b1aadec3ad9b29",
            "private_dns": "ip-172-31-48-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.48.127",
            "public_dns": "ec2-54-145-240-39.compute-1.amazonaws.com",
            "public_ip": "54.145.240.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce47b26fe4400f4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cf55884766b81cc4",
            "tags": {
              "name": "http_servers_subnet-0cf55884766b81cc4"
            },
            "tags_all": {
              "name": "http_servers_subnet-0cf55884766b81cc4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0f6931f1ca629419e",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c21308fed24a8ab",
            "arn": "arn:aws:ec2:us-east-1:577430166986:instance/i-0dc7476b0531601df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc7476b0531601df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c526eda5c3719a0a",
            "private_dns": "ip-172-31-74-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.74.78",
            "public_dns": "ec2-3-214-184-111.compute-1.amazonaws.com",
            "public_ip": "3.214.184.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cce2ef65fa8d30e3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6931f1ca629419e",
            "tags": {
              "name": "http_servers_subnet-0f6931f1ca629419e"
            },
            "tags_all": {
              "name": "http_servers_subnet-0f6931f1ca629419e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ff572fb27ba54e09"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_ami.aws_linux_2_latest",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577430166986:security-group/sg-00bbdd226a325606f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bbdd226a325606f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "577430166986",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "elb_sg"
            },
            "tags_all": {
              "name": "elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-028538eed195469b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:577430166986:security-group/sg-0ff572fb27ba54e09",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff572fb27ba54e09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_server_sg",
            "name_prefix": "",
            "owner_id": "577430166986",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "http_server_sg"
            },
            "tags_all": {
              "name": "http_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-028538eed195469b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}